<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
            android:text="@string/addUrlDialog"
            style="@style/AppTheme.url_dialog.title"
            android:background="@color/toolbar_color"
    />

    <EditText
            android:id="@+id/urlInput"
            android:text="@string/httpInput"
            android:inputType="textUri"
            android:hint="@string/input_url_hint"
            style="@style/AppTheme.url_dialog"/>

    <LinearLayout
            style="@style/AppTheme.url_dialog"
            android:orientation="horizontal"
            android:layout_gravity="center">

        <Button
                android:id="@+id/addUrlButton"
                android:text="@string/addUrlButtonText"
                style="@style/AppTheme.url_dialog"
                android:textColor="@color/button_selector"/>

        <Button
                android:id="@+id/cancelUrlButton"
                android:text="@string/cancelUrlAddButtonText"
                style="@style/AppTheme.url_dialog"
                android:layout_gravity="end"
                android:textColor="@color/button_selector"/>
    </LinearLayout>

</LinearLayout>
