<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              style="@style/AppTheme.dialog">

    <TextView
            android:text="@string/title_confirm_dialog"
            style="@style/AppTheme.dialog.title"/>

    <TextView
            android:id="@+id/text_confirm_dialog"
            android:text="@string/text_confirm_dialog"
            style="@style/AppTheme.dialog"/>

    <LinearLayout
            style="@style/AppTheme.dialog"
            android:orientation="horizontal"
            android:layout_gravity="center">

        <Button
                android:id="@+id/yes_button_confirm_dialog"
                android:text="@string/yes_button_confirm_dialog"
                style="@style/AppTheme.dialog.button"/>
        <Space
                android:layout_width="@dimen/button_spacer"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/no_button_confirm_dialog"
                android:text="@string/no_button_confirm_dialog"
                style="@style/AppTheme.dialog.button"/>
    </LinearLayout>

</LinearLayout>
